@@ -6460,6 +6460,10 @@ $\F_2[X]/(T)$. Assumes \kbd{T} irreducible in $\F_2[X]$.
 \fun{GEN}{F2xqX_factor_squarefree}{GEN f, GEN T} as
 \kbd{FlxqX\_factor\_squarefree}.
 
+\fun{GEN}{F2xqX_ddf}{GEN f, GEN T} as \kbd{FpX\_ddf}.
+
+\fun{GEN}{F2xqX_degfact}{GEN f, GEN T} as \kbd{FpX\_degfact}.
+
 \subsec{\kbd{F2xqXQ}}. See \kbd{FlxqXQ} operations.
 
 \fun{GEN}{FlxqXQ_inv}{GEN x, GEN S, GEN T}
