@@ -405,7 +405,8 @@ BA  165- [libpari] FpXX_integ, FpXX_halve, FqX_halve, FpXQXn_exp, FqXn_exp
 BA  167- [libpari] FpXn_inv, FpXQXn_inv, FqXn_inv
 BA  168- New file GP interface: fileclose fileextern fileflush fileopen
          fileread filereadstr filewrite filewrite1
-BA  169- [libpari] Flx_ddf, F2x_ddf, FpX_ddf
+BA  169- [libpari] Flx_ddf, F2x_ddf, FpX_ddf, F2xqX_ddf
+         F2xqX_degfact
 
   Changed
       1- rewrite bnfnarrow
